--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,139 @@
+body {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  /* width: 100vw; */
+  height: 100vh;
+}
+
+nav > * {
+  border: 1px solid green;
+}
+
+nav,
+footer {
+  position: relative;
+  border: 1px solid blue;
+  height: 10vh;
+  padding: 1em;
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+  justify-content: center;
+  align-content: center;
+}
+
+form {
+  grid-area: 1/2/2/3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  border: 1px solid gold;
+  border: 3px black;
+  display: grid;
+  grid-template: repeat(3, 1fr) / 1fr 3fr 1fr;
+  height: 100%;
+}
+
+div {
+  border: 1px solid red;
+}
+
 h1 {
   font-size: 3rem;
   font-family: sans-serif;
   color: skyblue;
   text-align: center;
+  grid-area: 1/1/2/2;
+  align-self: start;
+  padding: 0;
+  margin: 0;
 }
 
 img {
   width: 15rem;
   height: 15rem;
+}
+.sideLeft {
+  border: 1px solid black;
+  grid-area: 1/1/4/2;
+}
+.content {
+  border: 1px solid blue;
+  grid-area: 1/2/4/3;
+  display: grid;
+  grid-template: repeat(3, 1fr) / 1fr;
+}
+.sideRight {
+  border: 1px solid green;
+  grid-area: 1/3/4/4;
+}
+
+.side {
+  width: 100%;
+  height: 100%;
+}
+
+.topContent {
+  grid-area: 1/1/2/2;
+  display: flex;
+}
+
+.weatherIcon {
+  border: 1px black;
+  background-color: red;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.temp {
+  flex: 1;
+  background-color: blue;
+  border: 1px blue;
+  font-size: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.midContent {
+  grid-area: 2/1/3/2;
+  display: flex;
+}
+
+.midright {
+  flex: 1;
+  background-color: green;
+}
+
+.midleft {
+  flex: 1;
+  background-color: gold;
+}
+
+.botContent {
+  grid-area: 3/1/4/2;
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+}
+
+.top {
+  grid-area: 1/1/2/2;
+}
+.middle {
+  grid-area: 1/2/2/3;
+}
+.bot {
+  grid-area: 1/3/2/4;
 }
