--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+html {
+  font-size: inherit;
+}
+
 body {
   display: flex;
   flex-direction: column;
   flex: 1;
   /* width: 100vw; */
   height: 100vh;
+  font-size: 1.5rem;
 }
 
 nav > * {
@@ -63,6 +68,7 @@ img {
   width: 15rem;
   height: 15rem;
 }
+
 .sideLeft {
   border: 1px solid black;
   grid-area: 1/1/4/2;
@@ -129,11 +135,73 @@ img {
 }
 
 .top {
+  background-color: lightblue;
   grid-area: 1/1/2/2;
 }
 .middle {
+  background-color: lightcoral;
   grid-area: 1/2/2/3;
 }
 .bot {
+  background-color: lightgreen;
   grid-area: 1/3/2/4;
+}
+
+.top,
+.middle,
+.bot {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.botContent img,
+.temp img {
+  width: 6rem;
+  height: 6rem;
+  padding: 0.5em;
+  border: 2px solid red;
+}
+
+.temp img {
+  width: 7rem;
+  height: 7rem;
+  padding: 0;
+}
+
+.botContent div {
+  font-size: 3rem;
+}
+
+.midright,
+.midleft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: space-around;
+  font-size: 1.5rem;
+  padding: 1em;
+}
+
+#celsious {
+  font-size: 3rem;
+  margin-top: -6rem;
+}
+
+.midright span,
+.midleft span {
+  /* text-align: end; */
+  font-size: 2rem;
+}
+
+.midright > div,
+.midleft > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#weatherCondition {
+  font-size: 1.8rem;
 }
