--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ nav > * {
 nav,
 footer {
   position: relative;
-  border: 1px solid blue;
+  border: 1px solid green;
   height: 10vh;
   padding: 1em;
   display: grid;
@@ -42,15 +42,10 @@ footer {
 }
 
 .main {
-  border: 1px solid gold;
-  border: 3px black;
+  border: 1px solid red;
   display: grid;
   grid-template: repeat(3, 1fr) / 1fr 3fr 1fr;
   height: 100%;
-}
-
-div {
-  border: 1px solid red;
 }
 
 h1 {
@@ -70,17 +65,14 @@ img {
 }
 
 .sideLeft {
-  border: 1px solid black;
   grid-area: 1/1/4/2;
 }
 .content {
-  border: 1px solid blue;
   grid-area: 1/2/4/3;
   display: grid;
   grid-template: repeat(3, 1fr) / 1fr;
 }
 .sideRight {
-  border: 1px solid green;
   grid-area: 1/3/4/4;
 }
 
@@ -95,8 +87,7 @@ img {
 }
 
 .weatherIcon {
-  border: 1px black;
-  background-color: red;
+  background-color: blue;
   flex: 1;
   display: flex;
   justify-content: center;
@@ -105,8 +96,7 @@ img {
 
 .temp {
   flex: 1;
-  background-color: blue;
-  border: 1px blue;
+  background-color: red;
   font-size: 10rem;
   display: flex;
   align-items: center;
@@ -135,15 +125,15 @@ img {
 }
 
 .top {
-  background-color: lightblue;
+  background-color: lightcoral;
   grid-area: 1/1/2/2;
 }
 .middle {
-  background-color: lightcoral;
+  background-color: lightgreen;
   grid-area: 1/2/2/3;
 }
 .bot {
-  background-color: lightgreen;
+  background-color: lightblue;
   grid-area: 1/3/2/4;
 }
 
@@ -161,7 +151,6 @@ img {
   width: 6rem;
   height: 6rem;
   padding: 0.5em;
-  border: 2px solid red;
 }
 
 .temp img {
@@ -204,4 +193,13 @@ img {
 
 #weatherCondition {
   font-size: 1.8rem;
+}
+
+.content {
+  gap: 1rem 0;
+}
+
+.botContent {
+  border-radius: 10px;
+  box-shadow: 1px 4px 5px solid rgba(0, 0, 0, 0.117);
 }
