--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 1.5rem;
 }
 
@@ -39,7 +39,7 @@ footer {
 footer {
   border-top: 2px solid var(--borderColor);
   padding: 1em;
-  height: 10rem;
+  height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,7 +94,7 @@ input {
 
 .main {
   display: grid;
-  grid-template: repeat(3, 1fr) / 1fr 3fr 1fr;
+  grid-template: repeat(3, 1fr) / 1fr repeat(auto-fit, minmax(aut, 1fr)) 1fr;
   height: 100%;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -126,6 +126,7 @@ img {
 .topContent {
   grid-area: 1/1/2/2;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .weatherIcon {
@@ -148,6 +149,7 @@ img {
 .midContent {
   grid-area: 2/1/3/2;
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -164,7 +166,8 @@ img {
 .botContent {
   grid-area: 3/1/4/2;
   display: grid;
-  grid-template: 1fr / repeat(3, 1fr);
+  grid-template: 1fr / repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 250px;
   gap: 0px 1rem;
   background-color: var(--bg-color);
 }
@@ -271,7 +274,7 @@ img {
 }
 
 #navTitle {
-  font-size: 3rem;
+  font-size: clamp(40px, 3rem, 200px);
   font-family: sans-serif;
   color: var(--borderColor);
   text-align: end;
