--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ img {
 .botContent {
   grid-area: 3/1/4/2;
   display: grid;
-  grid-template: 1fr / repeat(auto-fill, minmax(250px, 1fr));
+  grid-template: 1fr / repeat(auto-fit, minmax(250px, 1fr));
   grid-auto-rows: 250px;
   gap: 0px 1rem;
   background-color: var(--bg-color);
